<resources>
    <string name="application_name">&TERMUX_APP_NAME;</string>
    <string name="shared_user_label">&TERMUX_APP_NAME; user</string>
    <string name="permission_run_command_label">Run commands in &TERMUX_APP_NAME; environment</string>
    <string name="permission_run_command_description">execute arbitrary commands within &TERMUX_APP_NAME;
        environment and access files</string>
    <string name="bootstrap_installer_body">Installing bootstrap packages…</string>
    <string name="bootstrap_error_title">Unable to install bootstrap</string>
    <string name="bootstrap_error_body">&TERMUX_APP_NAME; was unable to install the bootstrap packages.</string>
    <string name="bootstrap_error_abort">Abort</string>
    <string name="bootstrap_error_try_again">Try again</string>
    <string name="bootstrap_error_not_primary_user_message">&TERMUX_APP_NAME; can only be run as the primary user.
        \nBootstrap binaries compiled for &TERMUX_APP_NAME; have hardcoded $PREFIX path and cannot be installed
        under any path other than:\n%1$s.</string>
    <string name="bootstrap_error_installed_on_portable_sd">&TERMUX_APP_NAME; cannot be installed on
        portable/external/removable sd card on your device.
        \nBootstrap binaries compiled for &TERMUX_APP_NAME; have hardcoded $PREFIX path and cannot be installed
        under any path other than:\n%1$s.</string>
    <string name="debian_installer_title">Installing Debian</string>
    <string name="debian_installer_downloading">Downloading Debian… %1$s</string>
    <string name="debian_installer_extracting">Extracting Debian… %1$d files</string>
    <string name="debian_installer_configuring">Configuring Debian…</string>
    <string name="debian_installer_error_title">Unable to install Debian</string>
    <string name="debian_installer_retry">Retry</string>
    <string name="debian_installer_failsafe">Failsafe shell</string>
    <string name="action_new_session">New session</string>
    <string name="action_new_session_failsafe">Failsafe</string>
    <string name="title_max_terminals_reached">Max terminals reached</string>
    <string name="msg_max_terminals_reached">Close down existing ones before creating new.</string>
    <string name="title_rename_session">Set session name</string>
    <string name="action_rename_session_confirm">Set</string>
    <string name="title_create_named_session">New named session</string>
    <string name="action_create_named_session_confirm">Create</string>
    <string name="action_toggle_soft_keyboard">Keyboard</string>
    <string name="msg_enabling_terminal_toolbar">Enabling Terminal Toolbar</string>
    <string name="msg_disabling_terminal_toolbar">Disabling Terminal Toolbar</string>
    <string name="action_select_url">Select URL</string>
    <string name="title_select_url_dialog">Click URL to copy or long press to open</string>
    <string name="title_select_url_none_found">No URL found in the terminal.</string>
    <string name="msg_select_url_copied_to_clipboard">URL copied to clipboard</string>
    <string name="action_share_transcript">Share transcript</string>
    <string name="title_share_transcript">Terminal transcript</string>
    <string name="title_share_transcript_with">Send transcript to:</string>
    <string name="action_share_selected_text">Share selected text</string>
    <string name="title_share_selected_text">Terminal Text</string>
    <string name="title_share_selected_text_with">Send selected text to:</string>
    <string name="action_autofill_username">Autofill username</string>
    <string name="action_autofill_password">Autofill password</string>
    <string name="action_reset_terminal">Reset</string>
    <string name="msg_terminal_reset">Terminal reset</string>
    <string name="action_kill_process">Kill process (%d)</string>
    <string name="title_confirm_kill_process">Really kill this session?</string>
    <string name="action_style_terminal">Style</string>
    <string name="action_toggle_keep_screen_on">Keep screen on</string>
    <string name="action_open_help">Help</string>
    <string name="action_open_settings">Settings</string>
    <string name="action_open_file_manager">Files</string>
    <string name="title_activity_file_manager">File Manager</string>
    <string name="action_open_file">Open with</string>
    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="action_show_hidden">Show hidden files</string>
    <string name="action_hide_hidden">Hide hidden files</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_add_bookmark">Add current directory to bookmarks</string>
    <string name="action_new_folder">New folder</string>
    <string name="action_new_file">New file</string>
    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="action_cut">Cut</string>
    <string name="action_paste">Paste</string>
    <string name="action_share">Share information</string>
    <string name="action_details">Details</string>
    <string name="action_select_all">Select all</string>
    <string name="action_deselect_all">Deselect all</string>
    <string name="action_undo">Undo</string>
    <string name="action_go_back">Back</string>
    <string name="action_go_forward">Forward</string>
    <string name="title_new_folder">Create folder</string>
    <string name="title_new_file">Create file</string>
    <string name="title_rename">Rename</string>
    <string name="title_confirm_delete">Confirm delete</string>
    <string name="msg_confirm_delete">Are you sure you want to delete %1$s?</string>
    <string name="msg_confirm_delete_multiple">Are you sure you want to delete %1$d items?</string>
    <string name="hint_name">Name</string>
    <string name="action_create">Create</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_paste_items">Paste %1$d item(s) here</string>
    <string name="msg_file_created">Created %1$s</string>
    <string name="msg_file_deleted">Deleted %1$s</string>
    <string name="msg_file_renamed">Renamed to %1$s</string>
    <string name="msg_file_copied">Copied %1$s</string>
    <string name="msg_files_copied">Copied %1$d item(s)</string>
    <string name="msg_files_moved">Moved %1$d item(s)</string>
    <string name="msg_undo_delete">Deleted %1$s</string>
    <string name="msg_paste_success">Pasted %1$d item(s)</string>
    <string name="msg_error_create">Failed to create %1$s</string>
    <string name="msg_error_rename">Failed to rename</string>
    <string name="msg_error_delete">Failed to delete %1$s</string>
    <string name="msg_error_copy">Failed to copy %1$s</string>
    <string name="msg_error_move">Failed to move %1$s</string>
    <string name="msg_error_paste">Failed to paste items</string>
    <string name="filemanager_more">More</string>
    <string name="filemanager_clear">Clear</string>
    <string name="filemanager_new">New</string>
    <string name="action_new_symlink">New symlink</string>
    <string name="filemanager_up">Up</string>
    <string name="filemanager_broken_link">Broken link → %1$s</string>
    <string name="filemanager_link_target">Link → %1$s</string>
    <string name="filemanager_folder">Folder</string>
    <string name="filemanager_error_create_folder">Failed to create folder</string>
    <string name="filemanager_error_create_file">Failed to create file</string>
    <string name="filemanager_error_create_symlink">Failed to create symlink</string>
    <string name="filemanager_confirm_delete">Delete?</string>
    <string name="filemanager_move_to_trash">Move %1$d item(s) to trash?</string>
    <string name="filemanager_moved_to_trash">Moved to trash</string>
    <string name="filemanager_delete_failed">Delete failed</string>
    <string name="filemanager_broken_status">Status: broken (target not found)</string>
    <string name="filemanager_detail_path">Path: %1$s</string>
    <string name="filemanager_detail_size">Size: %1$s</string>
    <string name="filemanager_detail_type">Type: %1$s</string>
    <string name="filemanager_open">Open</string>
    <string name="filemanager_close">Close</string>
    <string name="filemanager_sort_by">Sort by</string>
    <string name="filemanager_link_name">Link name</string>
    <string name="filemanager_target_path">Target path</string>
    <string name="filemanager_ok">OK</string>
    <string name="sort_name">Name</string>
    <string name="sort_date">Date</string>
    <string name="sort_size">Size</string>
    <string name="sort_type">Type</string>
    <string name="bookmark_home">Home (~)</string>
    <string name="bookmark_downloads">Downloads</string>
    <string name="bookmark_root">Root (/)</string>
    <string name="bookmark_sdcard">Internal storage</string>
    <string name="title_details">File details</string>
    <string name="detail_name">Name</string>
    <string name="detail_path">Path</string>
    <string name="detail_size">Size</string>
    <string name="detail_modified">Modified</string>
    <string name="detail_permissions">Permissions</string>
    <string name="detail_mime">MIME type</string>
    <string name="detail_contents">Contents</string>
    <string name="detail_items">items</string>
    <string name="selection_mode_title">%1$d selected</string>
    <string name="action_report_issue">Report Issue</string>
    <string name="msg_generating_report">Generating Report</string>
    <string name="msg_add_termux_debug_info">Add Terminal debug info to report?</string>
    <string name="error_styling_not_installed">The &TERMUX_STYLING_APP_NAME; Plugin App is not installed.</string>
    <string name="action_styling_install">Install</string>
    <string name="notification_action_exit">Exit</string>
    <string name="notification_action_wake_lock">Acquire wakelock</string>
    <string name="notification_action_wake_unlock">Release wakelock</string>
    <string name="error_display_over_other_apps_permission_not_granted_to_start_terminal">&TERMUX_APP_NAME; requires
        \"Display over other apps\" permission to start terminal sessions from background on Android >= 10.
        Grants it from Settings -> Apps -> &TERMUX_APP_NAME; -> Advanced</string>
    <string name="error_termux_service_invalid_execution_command_runner">Invalid execution command runner to TermuxService: `%1$s`</string>
    <string name="error_termux_service_unsupported_execution_command_runner">Unsupported execution command runner to TermuxService: `%1$s`</string>
    <string name="error_termux_service_unsupported_execution_command_shell_create_mode">Unsupported execution command shell create mode to TermuxService: `%1$s`</string>
    <string name="error_termux_service_execution_command_shell_name_unset">Shell name not set but `%1$s` shell create mode passed</string>
    <string name="error_run_command_service_invalid_intent_action">Invalid intent action to RunCommandService: `%1$s`</string>
    <string name="error_run_command_service_invalid_execution_command_runner">Invalid execution command runner to RunCommandService: `%1$s`</string>
    <string name="error_run_command_service_mandatory_extra_missing">Mandatory extra missing to RunCommandService: \"%1$s\"</string>
    <string name="error_run_command_service_api_help">Visit %1$s for more info on RUN_COMMAND Intent usage.</string>
    <string name="title_file_received">Save file in ~/downloads/</string>
    <string name="action_file_received_edit">Edit</string>
    <string name="action_file_received_open_directory">Open directory</string>
    <string name="error_termux_service_start_failed_general">Failed to start TermuxService. Check logcat for exception message.</string>
    <string name="error_termux_service_start_failed_bg">Failed to start TermuxService while app is in background due to android bg restrictions.</string>
</resources>