<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/group_normal">

        <item
            android:id="@+id/action_search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/action_search"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="always" />

        <item
            android:id="@+id/action_new_folder"
            android:title="@string/action_new_folder"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_new_file"
            android:title="@string/action_new_file"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_sort"
            android:title="@string/action_sort"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_toggle_hidden"
            android:title="@string/action_show_hidden"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_bookmarks"
            android:title="@string/action_bookmarks"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_add_bookmark"
            android:title="@string/action_add_bookmark"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_paste"
            android:title="@string/action_paste"
            app:showAsAction="ifRoom" />

    </group>

    <group android:id="@+id/group_selection"
        android:visible="false">

        <item
            android:id="@+id/action_select_all"
            android:title="@string/action_select_all"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_copy"
            android:title="@string/action_copy"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_cut"
            android:title="@string/action_cut"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_delete"
            android:title="@string/action_delete"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_share"
            android:title="@string/action_share"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_deselect_all"
            android:title="@string/action_deselect_all"
            app:showAsAction="never" />

    </group>

</menu>
