<com.termux.app.terminal.TermuxActivityRootView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_termux_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/activity_termux_root_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="3dp"
        android:layout_marginVertical="0dp"
        android:orientation="vertical">

        <androidx.drawerlayout.widget.DrawerLayout
            android:id="@+id/drawer_layout"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/terminal_toolbar_view_pager"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/terminal_tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    app:tabMode="scrollable"
                    app:tabIndicatorColor="@color/red_400"
                    app:tabIndicatorHeight="2dp"
                    app:tabSelectedTextColor="@color/white"
                    app:tabTextColor="@color/grey_500"
                    app:tabMinWidth="48dp"
                    app:tabMaxWidth="160dp"
                    app:tabBackground="@android:color/black" />

                <com.termux.view.TerminalView
                    android:id="@+id/terminal_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:defaultFocusHighlightEnabled="false"
                    android:focusableInTouchMode="true"
                    android:scrollbarThumbVertical="@drawable/terminal_scroll_shape"
                    android:scrollbars="vertical"
                    tools:ignore="UnusedAttribute" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/left_drawer"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:descendantFocusability="blocksDescendants"
                android:orientation="vertical"
                android:background="?attr/termuxActivityDrawerBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <ImageButton
                        android:id="@+id/file_manager_button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_folder"
                        android:background="@null"
                        android:contentDescription="@string/action_open_file_manager"
                        app:tint="?attr/termuxActivityDrawerImageTint" />

                    <ImageButton
                        android:id="@+id/settings_button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_settings"
                        android:background="@null"
                        android:contentDescription="@string/action_open_settings"
                        app:tint="?attr/termuxActivityDrawerImageTint" />

                </LinearLayout>

                <LinearLayout
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/toggle_keyboard_button"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/action_toggle_soft_keyboard" />

                </LinearLayout>
            </LinearLayout>

        </androidx.drawerlayout.widget.DrawerLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/terminal_toolbar_view_pager"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="37.5dp"
            android:background="@color/black"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

    <View
        android:id="@+id/activity_termux_bottom_space_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/transparent" />

</com.termux.app.terminal.TermuxActivityRootView>
